Fixed compilation with ncurses-rs, turns out it doesn't have a binding for resize_term()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ authors = ["Ilkka Halila <ilkka@hali.la>"]
 [lib]
 name = "pancurses"
 
+[dependencies]
+log = "0.3"
+
 [target.x86_64-pc-windows-gnu.dependencies]
 pdcurses-sys = "0.2"
 [target.i686-pc-windows-gnu.dependencies]
