Implemented newdemo, which means mvinch() and ungetch(). Reverted mvaddch back to using chtypes pending a proper implementation that allows adding characters with attributes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ name = "pancurses"
 
 [dependencies]
 log = "0.3"
+libc = "0.2"
 
 [target.x86_64-pc-windows-gnu.dependencies]
 pdcurses-sys = "0.2"
