--- a/appveyor.yml
+++ b/appveyor.yml
@@ -63,22 +63,28 @@ environment:
   # Stable 64-bit GNU
     - channel: stable
       target: x86_64-pc-windows-gnu
+      MSYS_BITS: 64
   # Stable 32-bit GNU
     - channel: stable
       target: i686-pc-windows-gnu
+      MSYS_BITS: 32
   # Beta 64-bit GNU
     - channel: beta
       target: x86_64-pc-windows-gnu
+      MSYS_BITS: 64
   # Beta 32-bit GNU
     - channel: beta
       target: i686-pc-windows-gnu
+      MSYS_BITS: 32
   # Nightly 64-bit GNU
     - channel: nightly
       target: x86_64-pc-windows-gnu
+      MSYS_BITS: 64
       #cargoflags: --features "unstable"
   # Nightly 32-bit GNU
     - channel: nightly
       target: i686-pc-windows-gnu
+      MSYS_BITS: 32
       #cargoflags: --features "unstable"
 
 ### Allowed failures ###
@@ -105,6 +111,7 @@ install:
   - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init -yv --default-toolchain %channel% --default-host %target%
   - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
+  - if defined MSYS_BITS set PATH=%PATH%;C:\msys64\mingw%MSYS_BITS%\bin;C:\msys64\usr\bin
   - rustc -vV
   - cargo -vV
 
