--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ libc = "0.2"
 pdcurses-sys = "0.7"
 winreg = "0.5"
 [target.'cfg(unix)'.dependencies]
-ncurses = "5.91.0"
+ncurses = { git="https://github.com/Ella-0/ncurses-rs" }
 
 [dev-dependencies]
 rand = "0.4.2"
